--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
                     <window key="window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
-                        <windowStyleMask key="styleMask" titled="YES" closable="YES" texturedBackground="YES"/>
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" texturedBackground="YES" unifiedTitleAndToolbar="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
@@ -72,32 +72,10 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="TodayViewController" sceneMemberID="viewController">
-                    <view key="view" appearanceType="aqua" id="m2S-Jp-Qdl">
+                    <view key="view" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="380" height="570"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pqW-la-yHh" customClass="SeparatedButton">
-                                <rect key="frame" x="12" y="494" width="358" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="367" id="jc1-HQ-kjT"/>
-                                    <constraint firstAttribute="height" constant="21" id="wH3-Vr-s47"/>
-                                </constraints>
-                                <animations/>
-                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="pg8-YA-YtJ">
-                                    <font key="font" metaFont="system"/>
-                                    <segments>
-                                        <segment label="⇩" width="20">
-                                            <menu key="menu" id="FWr-XR-yCv"/>
-                                        </segment>
-                                        <segment label="Ⓐ &gt; (Finnish)" selected="YES" tag="1"/>
-                                        <segment label="English" width="114"/>
-                                        <segment label="Finnish" width="114"/>
-                                    </segments>
-                                </segmentedCell>
-                                <connections>
-                                    <action selector="sourceTabClick:" target="XfG-lQ-9wD" id="hP4-3I-EIU"/>
-                                </connections>
-                            </segmentedControl>
                             <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="RjJ-ix-sDr">
                                 <rect key="frame" x="15" y="297" width="365" height="5"/>
                                 <constraints>
@@ -157,11 +135,11 @@
                                     <animations/>
                                 </scroller>
                             </scrollView>
-                            <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I1K-y0-ISH" customClass="SeparatedButton">
-                                <rect key="frame" x="77" y="215" width="223" height="24"/>
+                            <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="I1K-y0-ISH" customClass="SeparatedButton">
+                                <rect key="frame" x="18" y="215" width="344" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="3Vf-6x-b9U"/>
-                                    <constraint firstAttribute="width" constant="345" id="ZBl-Vr-cHc"/>
+                                    <constraint firstAttribute="width" constant="340" id="FBu-uc-6Wv"/>
+                                    <constraint firstAttribute="height" constant="21" id="tZX-Ta-yJ9"/>
                                 </constraints>
                                 <animations/>
                                 <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="oPA-OJ-ecS">
@@ -170,9 +148,9 @@
                                         <segment label="⇩" width="20">
                                             <menu key="menu" id="b9s-LG-T2S"/>
                                         </segment>
-                                        <segment label="Russian" selected="YES" tag="1"/>
-                                        <segment label="Finnish"/>
-                                        <segment label="English"/>
+                                        <segment label="Russian" width="105" selected="YES" tag="1"/>
+                                        <segment label="Finnish" width="107"/>
+                                        <segment label="English" width="103"/>
                                     </segments>
                                 </segmentedCell>
                                 <connections>
@@ -249,24 +227,47 @@
                                     <animations/>
                                 </scroller>
                             </scrollView>
+                            <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pqW-la-yHh" customClass="SeparatedButton">
+                                <rect key="frame" x="18" y="494" width="344" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Y9d-X2-q58"/>
+                                    <constraint firstAttribute="width" constant="340" id="azi-lg-2tg"/>
+                                </constraints>
+                                <animations/>
+                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="pg8-YA-YtJ">
+                                    <font key="font" metaFont="system"/>
+                                    <segments>
+                                        <segment label="⇩" width="20">
+                                            <menu key="menu" id="FWr-XR-yCv"/>
+                                        </segment>
+                                        <segment label="Ⓐ &gt; (Finnish)" width="108" selected="YES" tag="1"/>
+                                        <segment label="English" width="103"/>
+                                        <segment label="Finnish" width="104"/>
+                                    </segments>
+                                </segmentedCell>
+                                <connections>
+                                    <action selector="sourceTabClick:" target="XfG-lQ-9wD" id="hP4-3I-EIU"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <constraints>
                             <constraint firstItem="2dr-Xe-duZ" firstAttribute="top" secondItem="pqW-la-yHh" secondAttribute="bottom" constant="8" id="0pA-aD-84P"/>
                             <constraint firstItem="RjJ-ix-sDr" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="G8O-iw-LGa"/>
                             <constraint firstItem="Jt6-rG-U8x" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="GPk-30-8zq"/>
+                            <constraint firstItem="I1K-y0-ISH" firstAttribute="top" secondItem="csf-jN-tGZ" secondAttribute="bottom" constant="8" id="GoY-Ld-UMB"/>
                             <constraint firstItem="RjJ-ix-sDr" firstAttribute="top" secondItem="0NE-Nv-hS7" secondAttribute="bottom" constant="8" id="JG4-HZ-kQa"/>
-                            <constraint firstItem="I1K-y0-ISH" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="OVi-fG-oev"/>
+                            <constraint firstItem="I1K-y0-ISH" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="MkL-Fg-Al4"/>
                             <constraint firstItem="csf-jN-tGZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="168" id="YBz-eb-Pbg"/>
                             <constraint firstItem="I1K-y0-ISH" firstAttribute="top" secondItem="csf-jN-tGZ" secondAttribute="bottom" constant="8" id="a8Y-Vv-NoK"/>
+                            <constraint firstItem="pqW-la-yHh" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="53" id="aQo-oD-Zel"/>
                             <constraint firstItem="0NE-Nv-hS7" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="eVN-r1-7I5"/>
                             <constraint firstItem="0NE-Nv-hS7" firstAttribute="top" secondItem="pqW-la-yHh" secondAttribute="bottom" constant="8" id="icV-2G-dQg"/>
                             <constraint firstItem="Jt6-rG-U8x" firstAttribute="top" secondItem="Sda-85-kUg" secondAttribute="bottom" constant="8" id="kOb-U9-ePW"/>
                             <constraint firstItem="2dr-Xe-duZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="330" id="kPX-8h-Q1U"/>
-                            <constraint firstItem="pqW-la-yHh" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="nXa-2a-0a1"/>
-                            <constraint firstItem="pqW-la-yHh" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="53" id="tle-8k-OXa"/>
                             <constraint firstItem="csf-jN-tGZ" firstAttribute="top" secondItem="RjJ-ix-sDr" secondAttribute="bottom" constant="8" id="u6c-Be-GC6"/>
                             <constraint firstItem="Sda-85-kUg" firstAttribute="top" secondItem="I1K-y0-ISH" secondAttribute="bottom" constant="8" id="u9g-SJ-qdg"/>
                             <constraint firstItem="Sda-85-kUg" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="uUq-rT-aiV"/>
+                            <constraint firstItem="pqW-la-yHh" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="w3Y-6Z-HOn"/>
                         </constraints>
                         <animations/>
                     </view>
